:sparkles: (geo) add geosearch endpoint and optimize openapi
