# app/stacks/geo/api-services/monitor/src/controller/index.ts
@@ -1,18 +1,19 @@
 import { Request, Response, Router } from "express";
-import { logger } from '../libs/powertools';
 import { Monitor } from "../@types";
 import { MonitorDAO } from "../DAO/Monitor";
+import { logger } from '../libs/powertools';
 const router = Router();
 
 /**
  * POST /monitors
  * Creates a new monitor for a specific municipality with a specified type of monitoring.
  */
-router.post("/", async (req: Request, res: Response) => {
+router.post("/:type", async (req: Request, res: Response) => {
     try {
         logger.info(`Processing ${req.method} Request for path: ${req.path}`);
 
-        const { idMunicipality, type } = req.body;
+        const { type } = req.params;
+        const { idMunicipality } = req.body;
         const apikey = (req.headers["x-api-key"] ?? "Unknown") as string;
 
         // Validate input
@@ -22,9 +23,9 @@ router.post("/", async (req: Request, res: Response) => {
             });
         }
 
-        if (type !== Monitor.type.WILDFIRE) {
+        if (type !== Monitor.type.LANDFILL) {
             return res.status(400).json({
-                message: "Invalid type. Currently only WILDFIRE type is supported."
+                message: "Invalid type. Currently only LANDFILL type is supported."
             });
         }
 
@@ -32,6 +33,7 @@ router.post("/", async (req: Request, res: Response) => {
         const monitor = await new MonitorDAO().createMonitor({
             idMunicipality,
             requestedBy: apikey,
+            type
         });
 
         logger.info(`Processed ${req.method} Request for path: ${req.path}`);
@@ -44,22 +46,20 @@ router.post("/", async (req: Request, res: Response) => {
 });
 
 /**
- * GET /monitors
+ * GET /monitors/:type
  * Returns all monitors, with optional filters for municipality or type.
  */
-router.get("/", async (req: Request, res: Response) => {
+router.get("/:type", async (req: Request, res: Response) => {
     try {
         logger.info(`Processing ${req.method} Request for path: ${req.path}`);
 
-        const { idMunicipality, type } = req.query;
+        const { type } = req.params;
+        const { idMunicipality } = req.query;
 
         // Build Filters
-        const filters: any = {};
+        const filters: Record<string, any> = { type };
         if (idMunicipality) {
             filters.idMunicipality = parseInt(idMunicipality as string);
-        }
-        if (type) {
-            filters.type = type;
         }
 
         // Fetch monitors
@@ -104,5 +104,42 @@ router.delete("/:id", async (req: Request, res: Response) => {
         res.status(500).json(error);
     }
 });
+
+/**
+ * POST /monitoring/:type/geosearch
+ * Search a Monitor based on a geographic search on latitude and longitude.
+ */
+router.post("/:type/geosearch", async (req: Request, res: Response) => {
+    try {
+        logger.info(`Processing ${req.method} Request for path: ${req.path}`);
+
+        const { type } = req.params;
+        const { latitude, longitude } = req.body;
+
+        // Validate input
+        if (!latitude || !longitude) {
+            return res.status(400).json({
+                message: "Missing required fields: latitude and longitude"
+            });
+        }
+
+        if (type !== Monitor.type.LANDFILL) {
+            return res.status(400).json({
+                message: "Invalid type. Currently only LANDFILL type is supported."
+            });
+        }
+
+        // Perform geographic search for monitors
+        const monitors = await new MonitorDAO().searchByPoint(latitude, longitude);
+
+        logger.info(`Processed ${req.method} Request for path: ${req.path}`);
+        res.status(200).json(monitors);
+
+    } catch (error: unknown) {
+        logger.error(`Error while processing ${req.method} Request for path: ${req.path}: ${typeof error}`, { error });
+        res.status(500).json(error);
+    }
+});
+
 
 export default router;
